# pyfulmen

./: .gitattributes  .gitignore  .goneatignore  AGENTS.md  CHANGELOG.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPOSITORY_SAFETY_PROTOCOLS.md  pyproject.toml  ruff.toml  test_prometheus_integration.py
.crucible/metadata/: metadata.yaml
.fulmen/: app.yaml  app.yaml.example
.github/workflows/: build.yml  test.yml
.goneat/: ssot-consumer.yaml  tools.local.yaml.example  tools.yaml  version-policy.yaml
.goneat/ssot/: provenance.json
config/: logging-policy.yaml
config/crucible-py/taxonomy/: metrics.yaml
docs/: fulhash_thread_safety.md  publishing.md  pyfulmen_overview.md
docs/crucible-py/architecture/: fulmen-forge-workhorse-standard.md  fulmen-helper-library-standard.md
docs/crucible-py/guides/: consuming-crucible-assets.md
docs/crucible-py/standards/: makefile-standard.md  repository-lifecycle.md
docs/development/: README.md  bootstrap.md  operations.md  setup-guide.md  telemetry-instrumentation-pattern.md
docs/development/adr/: ADR-0001-fulmencatalogmodel-populate-by-name.md  ADR-0002-validate-country-code-lookup-strategy.md  ADR-0003-country-catalog-preview-status.md  ADR-0004-tool-config-separation.md  ADR-0007-similarity-case-insensitive-tie-breaking.md  ADR-0008-global-metric-registry-singleton.md  ADR-0009-fulhash-independent-stream-instances.md  ADR-0010-pathfinder-checksum-performance-acceptable-delta.md  README.md  ecosystem-adoption-status.md
docs/guides/: logging.md
docs/guides/logging/: README.md  middleware.md  profiles.md
docs/modules/: fulpack.md  pathfinder.md  signals.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.13.md  v0.1.14.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
examples/: appidentity_cli_demo.py  appidentity_usage.py  error_telemetry_demo.py  fulpack_usage.py  logging_enterprise.py  logging_simple.py  logging_structured.py  signals_usage.py  similarity_v2_demo.py
scripts/: .ruff.toml  benchmark_pathfinder_checksums.py  bootstrap.py  compute_fulhash_fixtures.py  prepublish_sentinel.py  profile_pathfinder_overhead.py  validate-schema.sh  validate_pathfinder_fixtures.py  validate_ssot_provenance.py  verify_dist_contents.py  verify_local_install.py  verify_published_package.py
scripts/bootstrap/: README.md  compute_similarity_fixtures.py  validate_similarity_fixtures.py
scripts/demos/: ascii_demo.py  logging_demo.py
src/crucible/: __init__.py  schemas.py  terminal.py
src/crucible/foundry/: exit_codes.py
src/crucible/fulencode/: __init__.py  enums.py
src/crucible/fulhash/: __init__.py  types.py
src/crucible/fulpack/: __init__.py  enums.py  options.py  types.py
src/crucible/pyfulmen/: __init__.py
src/pyfulmen/: __init__.py  __main__.py  cli.py  version.py
src/pyfulmen/appidentity/: README.md  __init__.py  __main__.py  _cache.py  _loader.py  _validator.py  cli.py  errors.py  models.py
src/pyfulmen/ascii/: README.md  __init__.py  ascii.py  models.py  terminal.py
src/pyfulmen/config/: __init__.py  _platform.py  integration.py  loader.py  merger.py  paths.py
src/pyfulmen/crucible/: __init__.py  _frontmatter.py  _metadata.py  _paths.py  _version.py  bridge.py  config.py  docs.py  errors.py  models.py  schemas.py
src/pyfulmen/docscribe/: __init__.py  _formats.py  _frontmatter.py  _headers.py  errors.py  models.py
src/pyfulmen/error_handling/: __init__.py  _exit.py  _validate.py  _wrap.py  models.py
src/pyfulmen/foundry/: README.md  __init__.py  catalog.py  exit_codes.py  mime_detection.py  models.py
src/pyfulmen/fulhash/: __init__.py  _file.py  _hash.py  _helpers.py  _stream.py  models.py
src/pyfulmen/fulpack/: __init__.py  core.py  exceptions.py  security.py
src/pyfulmen/logging/: __init__.py  _models.py  _telemetry.py  config.py  context.py  formatter.py  logger.py  middleware.py  policy.py  profiles.py  severity.py  sinks.py  throttling.py
src/pyfulmen/pathfinder/: __init__.py  finder.py  ignore.py  models.py  safety.py
src/pyfulmen/schema/: __init__.py  _provenance.py  catalog.py  cli.py  export.py  validator.py
src/pyfulmen/signals/: __init__.py  _asyncio.py  _catalog.py  _http.py  _platform.py  _registry.py  _reload.py
src/pyfulmen/telemetry/: __init__.py  _alias.py  _exporter_metrics.py  _instruments.py  _registry.py  _validate.py  models.py  prometheus.py
tests/: test_basic.py
tests/fixtures/errors/: valid_error.json  (+1 more)
tests/integration/: __init__.py  test_appidentity_integration.py  test_dual_emission.py  test_pathfinder_checksum_parity.py  test_pathfinder_fulhash_integration.py  test_prometheus_exporter_metrics.py  test_schema_export.py  test_signals_integration.py  test_similarity_integration.py
tests/unit/: test_version.py
(+138 files in other folders)
