[project]
name = "pyfulmen"
version = "0.1.13"
description = "Python Fulmen libraries"
authors = [
    {name = "3 Leaps Team", email = "dev@3leaps.net"}
]
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
keywords = ["fulmen", "library", "enterprise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "jsonschema>=4.25.1",
    "click>=8.1.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "uuid6>=2025.0.1",
    "wcwidth>=0.2.0",
    "xxhash>=3.5.0",
    "rapidfuzz>=3.14.1",
    "google-crc32c>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/fulmenhq/pyfulmen"
Repository = "https://github.com/fulmenhq/pyfulmen"
Documentation = "https://github.com/fulmenhq/pyfulmen#readme"
Issues = "https://github.com/fulmenhq/pyfulmen/issues"
Changelog = "https://github.com/fulmenhq/pyfulmen/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "twine>=5.0.0",
]
telemetry = [
    "prometheus_client>=0.20.0,<0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfulmen"]

[tool.hatch.build.targets.wheel.force-include]
"src/pyfulmen/py.typed" = "pyfulmen/py.typed"
"config" = "config"
"schemas" = "schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest-asyncio>=1.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "twine>=5.0.0",
]

# Ruff configuration is in ruff.toml (see ADR-0004 for rationale)
